[package]
name = "larlis-barrier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
larlis-core = { version = "0.1.0", path = "../larlis-core" }

[dev-dependencies]
bincode = "1.3.3"
larlis-udp = { path = "../larlis-udp" }
serde = "1.0.160"
tokio = { version = "1.28.0", features = ["net", "rt", "macros"] }
