[package]
name = "larlis-barrier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
larlis-core = { version = "0.1.0", path = "../larlis-core" }

[dev-dependencies]
larlis-bincode = { path = "../larlis-bincode" }
larlis-udp = { path = "../larlis-udp" }
tokio = { version = "1.28.0", features = ["rt", "macros"] }
