[package]
name = "murmesh-barrier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
murmesh-bincode = { version = "0.1.0", path = "../murmesh-bincode" }
murmesh-core = { version = "0.1.0", path = "../murmesh-core" }
murmesh-tcp = { version = "0.1.0", path = "../murmesh-tcp" }
serde = "1.0.162"
tokio = { version = "1.28.0", features = ["rt"] }

[dev-dependencies]
murmesh-udp = { path = "../murmesh-udp" }
tokio = { version = "1.28.0", features = ["macros"] }
