[package]
name = "murmesh-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
murmesh-core = { version = "0.1.0", path = "../murmesh-core" }
tokio = { version = "1.28.0", features = ["net", "sync", "rt", "io-util", "macros"] }
