[package]
name = "murmesh-udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
murmesh-core = { version = "0.1.0", path = "../murmesh-core" }
tokio = { version = "1.27.0", features = ["net", "rt"] }
