[package]
name = "neat-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.14"
neat-core = { version = "0.1.0", path = "../neat-core" }
tokio = { version = "1.28.1", features = ["time", "net", "rt", "sync", "io-util"] }
rcgen = { version = "0.10.0", features = ["x509-parser"] }
rustls-pemfile = "1.0.2"
tokio-rustls = "0.24.0"
neat-bincode = { version = "0.1.0", path = "../neat-bincode" }
serde = "1.0.163"
