[package]
name = "entropy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "1.2.0", features = ["derive"] }
halloween = { version = "0.1.0", path = "../.." }
wirehair = { git = "https://github.com/sgdxbc/wirehair", version = "0.1.0" }
