[package]
name = "larlis_unreplicated"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
larlis_core = { version = "0.1.0", path = "../../larlis_core" }
larlis_udp = { version = "0.1.0", path = "../../larlis_udp" }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
