[package]
name = "larlis-pbft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ed25519-dalek = "1.0.1"
larlis-core = { version = "0.1.0", path = "../../larlis-core" }
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10.6"
