[package]
name = "larlis-unreplicated"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
larlis-barrier = { version = "0.1.0", path = "../../larlis-barrier" }
larlis-bincode = { version = "0.1.0", path = "../../larlis-bincode" }
larlis-core = { version = "0.1.0", path = "../../larlis-core" }
larlis-udp = { version = "0.1.0", path = "../../larlis-udp" }
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
