[package]
name = "neat-unreplicated"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
neat-barrier = { version = "0.1.0", path = "../../neat-barrier" }
neat-bincode = { version = "0.1.0", path = "../../neat-bincode" }
neat-core = { version = "0.1.0", path = "../../neat-core" }
neat-tcp = { version = "0.1.0", path = "../../neat-tcp" }
neat-tls = { version = "0.1.0", path = "../../neat-tls" }
neat-udp = { version = "0.1.0", path = "../../neat-udp" }
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
