[package]
name = "kademlia-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
kademlia-control-messages = { version = "0.1.0", path = "../kademlia-control-messages" }
reqwest = { version = "0.11.22", default-features = false, features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
